<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373737"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <VideoView
            android:id="@+id/vdvw1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_gravity="center" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnMisAl"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:background="@color/naranja"
            android:text="@string/mis_alquileres"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCoDi" />

        <Button
            android:id="@+id/btnNoticias"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@color/naranja"
            android:text="@string/noticias"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCoDi"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:background="@color/naranja"
            android:text="@string/coches_disponibles"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNoticias" />

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/gris_fondo"
            android:text="@string/boton_logout"
            android:textColor="@color/naranja"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>