<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_fondo"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@mipmap/ic_logo" />

    <TextView
        android:id="@+id/txvTitulo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:elegantTextHeight="true"
        android:fontFamily="sans-serif-black"
        android:text="@string/nombre_app"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/naranja"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textSize="40sp"
        android:textStyle="normal|bold"
        tools:lineSpacingExtra="8sp"
        tools:textColorHighlight="#000000" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/descripcion_app"
        android:textColor="@color/naranja"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/naranja" />

            <TextView
                android:id="@+id/txvUsuario"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/texto_usuario"
                android:textColor="@color/naranja"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/txtPwd"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/naranja" />

            <TextView
                android:id="@+id/txvContrasena"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/texto_contrasena"
                android:textColor="@color/naranja"
                android:textStyle="italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.7">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4" />

                <Button
                    android:id="@+id/btnLogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:backgroundTint="@color/naranja"
                    android:text="@string/boton_login"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4.5" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.8" />
</LinearLayout>