<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gris_oscuro_fondo">

    <TextView
        android:id="@+id/txvE2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/euro"
        android:textColor="@color/naranja"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txvTotalEntrada"
        app:layout_constraintTop_toBottomOf="@+id/txvHo"
        tools:textColor="@color/naranja" />

    <TextView
        android:id="@+id/txvTotalEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/naranja"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/txvTot"
        app:layout_constraintTop_toBottomOf="@+id/txvHo"
        tools:textColor="@color/naranja" />

    <TextView
        android:id="@+id/txvHorasEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/naranja"
        app:layout_constraintStart_toEndOf="@+id/txvHo"
        app:layout_constraintTop_toBottomOf="@+id/txvph"
        tools:textColor="@color/naranja" />

    <ImageView
        android:id="@+id/imgvw"
        android:layout_width="190dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txvph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/precio_hora"
        android:textColor="@color/naranja"
        app:layout_constraintStart_toEndOf="@+id/imgvw"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/naranja" />

    <TextView
        android:id="@+id/txvHo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:text="@string/horas"
        android:textColor="@color/naranja"
        app:layout_constraintStart_toEndOf="@+id/imgvw"
        app:layout_constraintTop_toBottomOf="@+id/txvph"
        tools:textColor="@color/naranja" />

    <TextView
        android:id="@+id/txvPPHEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/naranja"
        app:layout_constraintStart_toEndOf="@+id/txvph"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/naranja" />

    <TextView
        android:id="@+id/txvE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/euro"
        android:textColor="@color/naranja"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/txvPPHEntrada"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/naranja" />

    <TextView
        android:id="@+id/txvpremium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/premium_si_no"
        android:textColor="@color/naranja"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvMod"
        tools:textColor="@color/naranja" />

    <TextView
        android:id="@+id/txvMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/naranja"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvw"
        tools:textColor="@color/naranja" />

    <TextView
        android:id="@+id/txvPremLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/naranja"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txvpremium"
        app:layout_constraintTop_toBottomOf="@+id/txvMod"
        tools:textColor="@color/naranja" />

    <TextView
        android:id="@+id/txvTot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:text="@string/precio_final"
        android:textColor="@color/naranja"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgvw"
        app:layout_constraintTop_toBottomOf="@+id/txvHo"
        tools:textColor="@color/naranja" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:layout_marginTop="16dp"
        android:background="@color/gris_fondo"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvPremLvl"></LinearLayout>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/gris_fondo"
        android:text="@string/cancelar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>